deploy/iddaa-backend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iddaa-backend
  labels:
    name: iddaa-backend
    project: iddaa
    environment: production
